# SEARCH-22.5

./: .gitignore  README.md  main.py  pyproject.toml  setup.bat  setup.py  setup.sh
database/: build.py  build_database.py  learning.py  query.py  visualize.py
database/folded_states/: learning.py  query.py  visualize.py
database/tilings/: build_topologies.py
database/tilings/storage/: topologies_4_none.db-shm  topologies_4_none.db-wal
interface/: index.html
src/core/: math225_core.cpp
src/engine/: cp225.py  fold225.py  random_tiling.py  random_tiling2.py  tiling225.py  tiling225_debug.py  tiling225_debug2.py  tiling2cp.py  tiling_test.py  topology225.py  topology2tiling.py  tree.py
src/engine/experimental/: tiling225.py  tiling225debug.py  tiling225debug2.py
