[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "search22_5"
version = "0.1.0"
dependencies = [
    "networkx",
    "matplotlib",
    "faiss-cpu",
    "numpy",
]

[tool.setuptools]
packages = ["engine"]
package-dir = {"" = "src"}
