[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "search22_5"
version = "0.1.0"
dependencies = [
    "networkx",
    "matplotlib",
    "faiss-cpu",
    "numpy",
    "mmh3",
    "sqlalchemy",
    "scipy",
    "wakepy",
    "psutil",
    "pandas",
    "tqdm"
]

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true  # Only use this index if specifically requested or for pinned packages

[tool.uv.sources]
torch = { index = "pytorch-nightly" }
torchvision = { index = "pytorch-nightly" }
torchaudio = { index = "pytorch-nightly" }


[tool.setuptools]
packages = ["engine"]
package-dir = {"" = "src"}
